# fluentui-nextjs-appdir-plugin

./: .gitignore  Cargo.toml  README.md  fluentui_next_appdir_directive.wasm  package-lock.json  package.json
src/: lib.rs
tests/__swc_snapshots__/src/lib.rs/: append_directive_to_top.js
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
transform/tests/fixture/all/simple/: input.js  output.js
