[package]
name = "fluentui-next-appdir-directive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false

[workspace]
members = ["transform"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
swc_core = { version = "23.0.*", features = ["ecma_plugin_transform", "ecma_parser"] }
directive_transform = { path = "./transform" }
