[package]
name = "directive_transform"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Munoz Facusse"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "5.0.4", features = [
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_utils",
  "ecma_visit",
] }

[dev-dependencies]
serde_json = "1"
swc_core = { version = "5.0.4", features = [
  "testing_transform",
  "ecma_parser",
  "ecma_transforms_react",
] }
testing = "4.0.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
